# black-hole-renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.rst  lite.cpp
include/: autodiff.h  autodiff_2nd.h  base.h  colorize.h  colors.h  coordinate.h  disk.h  euler_heisenberg.h  flat.h  geodesic.h  integration.h  kerr.h  matrix.h  mod.h  numerics.h  parameters.h  qed_lagrangian.h  raytracer.h  rectangle.h  recursive_render.h  reissner_nordstrom.h  render.h  schwarzschild.h  spacetime.h  spectrum.h  tensor.h  texture.h  tga.h  vector.h
include/bhr/: base.h  chandra1960.h  coordinate.h  disk.h  euler_heisenberg.h  field.h  flat.h  geodesic.h  gui.h  integration.h  kerr.h  line.h  matrix.h  parameters.h  qed_lagrangian.h  raytracer.h  recursive_render.h  render.h  schwarzschild.h  settings.h  spacetime.h  spectrum.h  tensor.h  tga.h  utility.h
include/bhr/3rd/: specrend.h
scripts/: create_video.sh  theta_animation.py
src/: colors.cpp  disk.cpp  eh_gen.cpp  floatimage.cpp  kerr.cpp  lite.cpp  main.cpp  parameters.cpp  settings.cpp  spectrum.cpp  texture.cpp  tga.cpp
src/3rd/: sha1.cpp  specrend.cpp
src/bhr/: autodiff.h  autodiff_2nd.h  base.h  chandra1960.h  colorize.h  colors.cpp  colors.h  config.h  coordinate.h  disk.cpp  disk.h  eh_gen.cpp  euler_heisenberg.h  field.h  flat.h  float_helpers.h  floatimage.cpp  floatimage.h  geodesic.h  gui.h  integration.h  kerr.cpp  kerr.h  line.h  main.cpp  matrix.h  mod.h  numerics.h  parameters.cpp  parameters.h  physical_constants.h  qed_lagrangian.h  raytracer.h  rectangle.h  recursive_render.h  reissner_nordstrom.h  render.cpp  render.h  schwarzschild.h  settings.cpp  (+11 more)
src/bhr/3rd/: sha1.cpp  specrend.cpp  specrend.h
tests/: CMakeLists.txt  test_autodiff_2nd.cpp  test_boyer_nidquist.cpp  test_euler_heisenberg.cpp  test_flat.cpp  test_flat_spherical.cpp  test_float_helpers.cpp  test_kerr.cpp  test_qed_lagrangian.cpp  test_rgf45.cpp  test_rkf45.cpp  test_schwarzschild.cpp  test_spherical.cpp  test_tensor.cpp  tests.cpp  tests.h
